force-app/main/default/objects/Student__c/fields/Enrollment_number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_number__c</fullName>
    <displayFormat>EN-{0000}</displayFormat>
    <label>Enrollment number</label>
    <type>AutoNumber</type>
</CustomField>