force-app/main/default/objects/Student__c/fields/optional__c.field-meta.xml
<CustomField>
    <fullName>optional__c</fullName>
    <label>optional</label>
    <length>15</length>
    <type>Text</type>
</CustomField>