force-app/main/default/objects/Student__c/fields/Rollno__c.field-meta.xml
<CustomField>
    <fullName>Rollno__c</fullName>
    <label>Rollno</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>