force-app/main/default/objects/Student__c/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <label>Scholarship</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>