force-app/main/default/objects/Student__c/fields/SST__c.field-meta.xml
<CustomField>
    <fullName>SST__c</fullName>
    <label>SST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>