force-app/main/default/objects/Student__c/validationRules/value.validationRule-meta.xml
<ValidationRule>
    <fullName>value</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(English__c &gt;100,English__c&lt;0),true,false)</errorConditionFormula>
    <errorDisplayField>English__c</errorDisplayField>
    <errorMessage>Enter valid marks</errorMessage>
</ValidationRule>