force-app/main/default/objects/Student__c/validationRules/value_Hindi.validationRule-meta.xml
<ValidationRule>
    <fullName>value_Hindi</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Hindi__c &gt;100,Hindi__c &lt;0)</errorConditionFormula>
    <errorDisplayField>Hindi__c</errorDisplayField>
    <errorMessage>Enter valid marks</errorMessage>
</ValidationRule>