force-app/main/default/objects/Student__c/validationRules/Value_Maths.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Maths</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Maths__c &gt;100,Maths__c &lt;0)</errorConditionFormula>
    <errorDisplayField>Maths__c</errorDisplayField>
    <errorMessage>Enter valid marks</errorMessage>
</ValidationRule>