force-app/main/default/objects/Student__c/validationRules/Value_Science.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Science</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Science__c &gt;100,Science__c&lt;0 )</errorConditionFormula>
    <errorDisplayField>Science__c</errorDisplayField>
    <errorMessage>Enter valid marks</errorMessage>
</ValidationRule>