force-app/main/default/objects/Student__c/validationRules/Value_Sst.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Sst</fullName>
    <active>true</active>
    <errorConditionFormula>OR( SST__c &gt;100,SST__c &lt;0)</errorConditionFormula>
    <errorDisplayField>SST__c</errorDisplayField>
    <errorMessage>Enter valid marks</errorMessage>
</ValidationRule>